change gitconfig email

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 	ui = true
 [user]
 	name = janghyuan
-	email = janghyuan@163.com
+	email = janghuan@gmail.com
 [alias]
 	c = commit
 	co = checkout
