add new tmux conf file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,39 +1,76 @@
-# 取消默认的前缀，并设置为 Ctrl + a
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+# 将默认的前缀键 Ctrl+b 修改为 Ctrl+a
 unbind C-b
 set -g prefix C-a
 
-# 设置快捷键 R 自动加载配置文件
-bind R source-file ~/.tmux.conf \; display "弹药装填完毕..."
+# 加载配置文件 .tmux.conf
+bind R source-file ~/.tmux.conf \; display-message '配置同步率: 100%%...'
 
-# 使用 Vim 的模式自由选择 pane
-bind-key k select-pane -U
-bind-key j select-pane -D
-bind-key h select-pane -L
-bind-key l select-pane -R
-
-# 在 copy-mode 下使用 vi 模式
+# 在 copy mode 中使用类似 vi 的快捷键
 setw -g mode-keys vi
-# 在 copy-mode 下使用 v 开始选区
+
+# 新 window ／pane 创建时自动引用 reattach-to-user-namespace
+# $ brew install reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# 在 copy mode 中，使用 v 开始选择文本
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-set -g default-terminal "xterm-256color"
+# 设置 terminal 的标题栏
+set -g set-titles on
+set -g set-titles-string '#h ❐ #S ● #I #W'
 
-# Status bar
-  # colors
-  set -g status-bg black
-  set -g status-fg white
- 
-  # alignment
-  set-option -g status-justify centre
- 
-  # spot at left
-  set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
-  set-option -g status-left-length 20
- 
-  # window list
-  setw -g automatic-rename on
-  set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
-  set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
- 
-  # spot at right
-  set -g status-right '#[fg=green][#[fg=cyan]%Y-%m-%d#[fg=green]]'
+# 重新绑定纵向和横向切分window快捷键。|，-，更直观地表明了切割方向
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# 在不同面板间切换，改为vim风格
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# 调整面板大小
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# 设置状态栏前景及背景色
+set -g status-bg colour236
+set -g status-fg colour68
+
+# 设置状态栏左部宽度  默认为10
+set -g status-left-length 35
+# 设置状态栏左部显示内容。
+set -g status-left "#[fg=colour252,bold,bg=colour238] 🌺  S: #S #[fg=colour250,bg=colour237] 🏵  W: #I #[fg=yellow,bg=colour236] ☘  P: #P#[default]"
+# 设置状态栏右部宽度
+set -g status-right-length 48
+# 设置状态栏右部内容，这里设置为时间信息
+set -g status-right "#[fg=colour251,bold,bg=colour236] 🗓  %Y/%b/%d #[fg=colour251,bold,bg=colour237] ⏱  %R #[fg=colour251,bold,bg=colour238] 🐳  #(ifconfig | grep 'inet.*netmask.*broadcast' | awk '{print $2}')"
+# 窗口信息居中显示
+set -g status-justify centre
+# 设置状态栏更新时间 每60秒更新一次，默认是15秒更新
+set -g status-interval 60
+
+
+# 设置窗口标签的前景及背景色
+setw -g window-status-fg colour72
+setw -g window-status-bg colour236
+setw -g window-status-attr dim
+
+# 设置当前窗口标签的前景及背景色,所谓当前窗口标签会显示在状态栏中间
+setw -g window-status-current-fg colour22
+setw -g window-status-current-bg colour73
+setw -g window-status-current-attr bright
+
+# 设置 pane 分割的边框颜色
+set -g pane-border-fg black
+set -g pane-border-bg black
+
+# 设置当前 pane 分割的边框颜色
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
